src/test/deca/syntax/invalid/ourTests/test_print_brac.deca
// Description:
//    Programme minimaliste utilisant println, manque de "
//
// Resultats:
//    erreur, manque de token "
//

{
    println{"Hello World"};
}
